iSAAC-02.16.03.09
* SAAC-914 SSE2 Smith-Waterman uses wrong intrinsic to compare strings of bytes

iSAAC-02.16.02.19
* SAAC-909 Mismatching number of clusters read for r1/r2 from bgzf-compressed fastq when zcat|wc -l shows number of reads match

iSAAC-02.16.01.19
* SAAC-904 CIGAR buffer too small causes crash on high coverage of shorter than read length templates

iSAAC-02.16.01.14
* SAAC-901 Months start with January being 0 in log output

iSAAC-02.15.11.11
* SAAC-884 change --qscore-bin --and qscore-bin-values into single option -remap-qscores

iSAAC-02.15.11.02
* SAAC-877 segfault in findNeighbors due to compiler optimizations

iSAAC-02.15.10.30
* SAAC-875 segfaults with --buffer-bins no when --temp-concurrent-save is smaller than number of bins

iSAAC-02.15.10.21
* SAAC-873 templates shorter than read length don't get flagged as proper pairs since 15.01.30

iSAAC-02.15.09.28
* SAAC-858 configurable fastq Q0 base

iSAAC-02.15.09.25
* SAAC-855 Support s.locs for bcl-bgzf flowcells
* SAAC-856 Resuming bcl bgzf analysis crashes

iSAAC-02.15.09.22
* SAAC-852 More efficient threading in bam generation
* SAAC-850 large blocks of memory initialized under exclusive lock in bam generation

iSAAC-02.15.09.07
* SAAC-843 control md5 production from command line
* SAAC-836 CPU oversubscription in gap realignment slows down bam generation
* SAAC-842 prevent uncontrolled CIGAR buffer reallocations

iSAAC-02.15.09.04
* SAAC-833 1D1I in CIGAR after realignment

iSAAC-02.15.09.03
* SAAC-831 0M in CIGAR after gap realignment

iSAAC-02.15.08.26
* SAAC-835 parallelize bcl transpose

iSAAC-02.15.08.25
* SAAC-833 1D1I in CIGAR after realignment
* SAAC-824 Intel compiler compatibility

iSAAC-02.15.08.24
* SAAC-830 --pre-allocate-bins yes results in bin files full of 0x00

iSAAC-02.15.08.20
* SAAC-826 low --input-concurrent-load potentially causes bcl data read improperly

iSAAC-02.15.07.22