@@ -39,7 +39,7 @@ set(iSAAC_STRING "iSAAC")
 set(iSAAC_VERSION_MAJOR 02)
 set(iSAAC_VERSION_MINOR 16)
 set(iSAAC_VERSION_PATCH 03)
-set(iSAAC_VERSION_DEVEL 09)
+set(iSAAC_VERSION_DEVEL 29)
 set(iSAAC_VERSION_FULL "${iSAAC_STRING}-${iSAAC_VERSION_MAJOR}.${iSAAC_VERSION_MINOR}.${iSAAC_VERSION_PATCH}.${iSAAC_VERSION_DEVEL}")
 
 if (CPACK_GENERATOR)
