@@ -134,7 +134,13 @@ include_directories(BEFORE SYSTEM ${LIBXSLT_INCLUDE_DIR})
 include_directories(BEFORE SYSTEM ${LIBEXSLT_INCLUDE_DIR})
 set(iSAAC_DEP_LIB ${iSAAC_DEP_LIB} "${LIBEXSLT_LIBRARIES}" "${LIBXSLT_LIBRARIES}" "${LIBXML2_LIBRARIES}")
 
-set (CMAKE_CXX_FLAGS "$ENV{CXX_FLAGS} $ENV{CXXFLAGS} -fopenmp -msse2 -Wall -Wextra -Wunused -Wno-long-long -Wsign-compare -Wpointer-arith " CACHE STRING "g++ flags" FORCE)
+if(NOT iSAAC_AVX2)
+  set(iSAAC_VECTORIZATION "-msse2")
+else(iSAAC_AVX2)
+  set(iSAAC_VECTORIZATION "-mavx2")
+endif(iSAAC_AVX2)
+
+set (CMAKE_CXX_FLAGS "$ENV{CXX_FLAGS} $ENV{CXXFLAGS} -fopenmp ${iSAAC_VECTORIZATION} -Wall -Wextra -Wunused -Wno-long-long -Wsign-compare -Wpointer-arith " CACHE STRING "g++ flags" FORCE)
 #set (CMAKE_CXX_FLAGS_DEBUG "-O0 -g -pg -std=c++0x -fprofile-arcs -ftest-coverage -D_GLIBCXX_DEBUG" CACHE STRING "g++ flags" FORCE)
 set (CMAKE_CXX_FLAGS_DEBUG "-O3 -g -std=c++0x -D_GLIBCXX_DEBUG=1 -pedantic" CACHE STRING "g++ flags" FORCE)
 set (CMAKE_CXX_FLAGS_RELEASE "-O3 -std=c++0x -DNDEBUG" CACHE STRING "g++ flags" FORCE)
